# MosfetSolver

./: .gitignore  Cargo.toml  half adder brute.txt
src/: bit.rs  custom.rs  main.rs  old_main.rs  pathfind.rs  signal.rs  vec_set.rs
src/data/: mod.rs  undo_map.rs
src/solvers/: custom.rs  dfs.rs  mod.rs  pathfind.rs
src/test/: circuits.rs  mod.rs
